changed from sampler to player and currently testing the module

--- a/android/app/src/main/assets/custom/webview.html
+++ b/android/app/src/main/assets/custom/webview.html
@@ -9,15 +9,18 @@
       try {
         var osc = new Tone.Oscillator().toDestination();
         var synth = new Tone.PolySynth({}, Tone.Synth).toDestination();
+
       } catch (err) {
         window.ReactNativeWebView.postMessage(err);
       }
 
+      timeout = false;
 
     </script>
   </head>
 
   <body>
+    <a id="stop"></a>
   </body>
 
   </html>
