--- a/assets/webview.html
+++ b/assets/webview.html
@@ -14,11 +14,19 @@
         window.ReactNativeWebView.postMessage(err);
       }
 
+      timeout1 = false;
+      timeout2 = false;
+      timeout3 = false;
+
+      player1 = null;
+      player2 = null;
+      player3 = null;
 
     </script>
   </head>
 
   <body>
+    <a id="stop"></a>
   </body>
 
   </html>
