--- a/assets/webview.html
+++ b/assets/webview.html
@@ -22,6 +22,10 @@
       player2 = null;
       player3 = null;
 
+      now1 = null;
+      now2 = null;
+      now3 = null;
+
     </script>
   </head>
 
